--- a/Trippic/it.lproj/Localizable.strings
+++ b/Trippic/it.lproj/Localizable.strings
@@ -1,13 +1,11 @@
+/* No comment provided by engineer. */
+"About" = "Info";
+
+/* No comment provided by engineer. */
 "Add Photo" = "Aggiungi Foto";
 
 /* No comment provided by engineer. */
-"Adding attachments is disabled at the moment." = "Aggiungere allegati è disabilitato al momento.";
-
-/* No comment provided by engineer. */
-"Are you sure you want to permanently delete this location?" = "Sei sicuro di voler eliminare permanentemente questa tappa?";
-
-/* No comment provided by engineer. */
-"Attachments" = "Allegati";
+"Are you sure you want to permanently delete this location?" = "Sei sicuro di voler definitivamente eliminare la tappa?";
 
 /* No comment provided by engineer. */
 "Cancel" = "Annulla";
@@ -16,16 +14,16 @@
 "Change Location" = "Cambia Tappa";
 
 /* No comment provided by engineer. */
-"Cration Date" = "Data di Creazione";
-
-/* No comment provided by engineer. */
 "Dates" = "Date";
 
 /* No comment provided by engineer. */
 "Delete" = "Elimina";
 
 /* No comment provided by engineer. */
-"Delete selected" = "Cancella selezione";
+"Delete Selection" = "Elimina Selezione";
+
+/* No comment provided by engineer. */
+"Delete Trip" = "Elimina Viaggio";
 
 /* No comment provided by engineer. */
 "Dismiss" = "Annulla";
@@ -40,46 +38,46 @@
 "Edit Trip" = "Modifica Viaggio";
 
 /* No comment provided by engineer. */
-"End date" = "Data di fine";
+"End date" = "Data di conclusione";
 
 /* No comment provided by engineer. */
-"End date:" = "Data di fine:";
+"End date:" = "Data di conclusione:";
 
 /* No comment provided by engineer. */
-"Enter trip name" = "Inserire nome del viaggio";
+"Enter trip name" = "Modifica nome";
 
 /* No comment provided by engineer. */
 "Name:" = "Nome:";
 
 /* No comment provided by engineer. */
-"New Note" = "Nuovo Appunto";
+"New Note" = "Nuova Appunto";
 
 /* No comment provided by engineer. */
 "Notes" = "Appunti";
 
 /* No comment provided by engineer. */
-"Pick Location" = "Scegli Tappa";
-
-/* No comment provided by engineer. */
 "Remove Location" = "Rimuovi Tappa";
 
 /* No comment provided by engineer. */
-"Select your location" = "Scegli la tua tappa";
+"Select your location" = "Seleziona la tua tappa";
 
 /* No comment provided by engineer. */
-"Show All Photos" = "Mostra tutte le Foto";
+"Show All Photos" = "Mostra tutte le foto";
 
 /* No comment provided by engineer. */
-"Start date" = "Data d'inizio";
+"Start date" = "Data di inizio";
 
 /* No comment provided by engineer. */
-"Start date:" = "Data di' inizio:";
+"Start date:" = "Data di inizio:";
 
 /* No comment provided by engineer. */
-"There aren't any notes for this trip." = "Questo viaggio non ha appunti.";
+"Swipe to search locations" = "Fai uno swipe per cercare una destinazione";
 
 /* No comment provided by engineer. */
-"There aren't any trips." = "Non ci sono viaggio.";
+"There aren't any notes for this trip." = "Non ci sono note per questo viaggio.";
+
+/* No comment provided by engineer. */
+"There aren't any trips." = "Non ci sono viaggi.";
 
 /* No comment provided by engineer. */
 "Trip Name" = "Nome Viaggio";
@@ -88,17 +86,11 @@
 "Trips" = "Viaggi";
 
 /* No comment provided by engineer. */
-"New Trip" = "Nuovo viaggio";
-
-/* No comment provided by engineer. */
-"Delete Trip" = "Elimina Viaggio";
-
-/* No comment provided by engineer. */
 "Type here..." = "Digita qui...";
 
 /* No comment provided by engineer. */
 "Type to edit note..." = "Digita per modificare l'appunto...";
 
 /* No comment provided by engineer. */
-"Type to find a location." = "Digita per trovare una tappa.";
+"Zoom in" = "Zoom in";
 
