--- a/Trippic/Localization/en.lproj/Localizable.strings
+++ b/Trippic/Localization/en.lproj/Localizable.strings
@@ -102,3 +102,8 @@
 /* No comment provided by engineer. */
 "Type to find a location." = "Type to find a location.";
 
+/* No comment provided by engineer. */
+"About" = "About";
+
+/* No comment provided by engineer. */
+"Swipe to search locations" = "Swipe to search locations";
