--- a/Trippic/Localization/it.lproj/Localizable.strings
+++ b/Trippic/Localization/it.lproj/Localizable.strings
@@ -102,3 +102,8 @@
 /* No comment provided by engineer. */
 "Type to find a location." = "Digita per trovare una tappa.";
 
+/* No comment provided by engineer. */
+"About" = "Info";
+
+/* No comment provided by engineer. */
+"Swipe to search locations" = "Fai uno swipe per cercare tappe";
