Added Apple Silicon designed for iPhone target.

--- a/Trippic/Localization/en.lproj/Localizable.strings
+++ b/Trippic/Localization/en.lproj/Localizable.strings
@@ -107,3 +107,6 @@
 
 /* No comment provided by engineer. */
 "Swipe to search locations" = "Swipe to search locations";
+
+/* No comment provided by engineer. */
+"Delete Selection" = "Delete Selection";
