--- a/Trippic/Localization/it.lproj/InfoPlist.strings
+++ b/Trippic/Localization/it.lproj/InfoPlist.strings
@@ -1,3 +1,3 @@
 /* Privacy - Photo Library Usage Description */
-"NSPhotoLibraryUsageDescription" = "Trippic necessita usa l'accesso alle tue foto per permetterti di descrivere i tuoi itinerari di viaggio.";
+"NSPhotoLibraryUsageDescription" = "Trippic usa l'accesso alle tue foto per permetterti di descrivere i tuoi itinerari di viaggio.";
 
