--- a/Trippic/Localization/it.lproj/Localizable.strings
+++ b/Trippic/Localization/it.lproj/Localizable.strings
@@ -46,7 +46,7 @@
 "End date:" = "Data di fine:";
 
 /* No comment provided by engineer. */
-"Enter trip name" = "Inserire nome del Itinerario";
+"Enter trip name" = "Inserire nome dell'itinerario";
 
 /* No comment provided by engineer. */
 "Name:" = "Nome:";
@@ -73,13 +73,13 @@
 "Start date" = "Data d'inizio";
 
 /* No comment provided by engineer. */
-"Start date:" = "Data di' inizio:";
+"Start date:" = "Data di inizio:";
 
 /* No comment provided by engineer. */
 "There aren't any notes for this trip." = "Non ci sono ancora appunti per questo itinierario";
 
 /* No comment provided by engineer. */
-"There aren't any trips." = "Non ci sono Itinerario.";
+"There aren't any trips." = "Non ci sono itinerari.";
 
 /* No comment provided by engineer. */
 "Trip Name" = "Nome Itinerario";
@@ -110,3 +110,6 @@
 
 /* No comment provided by engineer. */
 "Delete Selection" = "Elimina Selezione";
+
+/* No comment provided by engineer. */
+"%@. Start: %@; End: %@." = "%@. Inizio: %@; Fine: %@.";
