--- a/Trippic/Localization/en.lproj/Localizable.strings
+++ b/Trippic/Localization/en.lproj/Localizable.strings
@@ -116,3 +116,6 @@
 
 /* No comment provided by engineer. */
 "Map" = "Map";
+
+/* No comment provided by engineer. */
+"New Location" = "New Location";
