--- a/Trippic/Localization/it.lproj/Localizable.strings
+++ b/Trippic/Localization/it.lproj/Localizable.strings
@@ -116,3 +116,6 @@
 
 /* No comment provided by engineer. */
 "Map" = "Mappa";
+
+/* No comment provided by engineer. */
+"New Location" = "Nuova Tappa";
