--- a/Trippic/Localization/en.lproj/Localizable.strings
+++ b/Trippic/Localization/en.lproj/Localizable.strings
@@ -134,3 +134,6 @@ The app was born from an idea developed by students of the (Liceo Scientifico de
 The final phase of the project, consisting the the development of the app and the subsequent stages of testing, improvement of the user experience and publication on the App Store, was handled by the student Alessio Garzia Marotta Brusco with the coordination of (prof.) Domenico Caggiano and the help of the students of the ”App Development with Swift” course.
 
 The app, made with the SwiftUI and MapKit frameworks for locating trips, has been made compliant with Apple's Human Interface Guidelines, and fully localized in Italian and English with support for VoiceOver.";
+
+/* No comment provided by engineer. */
+"There aren't any locations for this trip." = "There aren't any locations for this trip.";
