--- a/Trippic/Localization/en.lproj/Localizable.strings
+++ b/Trippic/Localization/en.lproj/Localizable.strings
@@ -137,3 +137,6 @@ The app, made with the SwiftUI and MapKit frameworks for locating trips, has bee
 
 /* No comment provided by engineer. */
 "There aren't any locations for this trip." = "There aren't any locations for this trip.";
+
+/* No comment provided by engineer. */
+"Are you sure you want to permanently delete this trip?" = "Are you sure you want to permanently delete this trip?";
