--- a/Trippic/Localization/it.lproj/Localizable.strings
+++ b/Trippic/Localization/it.lproj/Localizable.strings
@@ -97,7 +97,7 @@
 "Type here..." = "Digita qui...";
 
 /* No comment provided by engineer. */
-"Type to edit note..." = "Digita quì modificare l'appunto...";
+"Type to edit note..." = "Digita qui per modificare l'appunto...";
 
 /* No comment provided by engineer. */
 "Type to find a location." = "Digita per trovare una tappa.";
@@ -137,3 +137,6 @@ L’app, basata sui framework SwiftUI e MapKit per la localizzazione degli itine
 
 /* No comment provided by engineer. */
 "There aren't any locations for this trip." = "Non ci sono tappe per questo itinerario";
+
+/* No comment provided by engineer. */
+"Are you sure you want to permanently delete this trip?" = "Sei sicuro di voler eliminare permanentemente il viaggio?";
