Added GitHub repository link.

--- a/Trippic/Localization/it.lproj/Localizable.strings
+++ b/Trippic/Localization/it.lproj/Localizable.strings
@@ -127,7 +127,7 @@ The app was born from an idea developed by high school students attending Istitu
 
 The final phase of the project, consisting in the development of the app and the subsequent stages of testing, improvement of the user experience and publication on the App Store, was handled by the student Alessio Garzia Marotta Brusco with the coordination of teacher Domenico Caggiano and the help of the students of the “App Development with Swift” course.
 
-The app, made with the SwiftUI and MapKit frameworks for locating trips, has been made compliant with Apple's Human Interface Guidelines, and fully localized in Italian and English with support for VoiceOver." = "Trippic! rappresenta un diario virtuale digitale per documentare e custodire nel tempo le esperienze vissute durante gli itinerari di viaggio personali, attraverso le istantanee dei paesaggi, dei luoghi e degli incontri rimasti nel cuore, i pensieri e le sensazioni vissute.
+The app, made with the SwiftUI and MapKit frameworks for locating trips, has been made compliant with Apple's Human Interface Guidelines, and fully localized in Italian and English with support for VoiceOver." = "Trippic! rappresenta un diario digitale per documentare e custodire nel tempo le esperienze vissute durante gli itinerari di viaggio personali, attraverso le istantanee dei paesaggi, dei luoghi e degli incontri rimasti nel cuore, i pensieri e le sensazioni vissute.
 
 L’app nasce da un’idea sviluppata dagli studenti della classe terza del Liceo Scientifico dell’Istituto Sacro Cuore di Napoli, seguendo le linee guida del workbook pubblicato da Apple “Diario di progettazione delle app”, che ha guidato i gruppi di lavoro nelle fasi di brainstorming, pianificazione e valutazione del prototipo.
 
