--- a/Trippic/Localization/it.lproj/Localizable.strings
+++ b/Trippic/Localization/it.lproj/Localizable.strings
@@ -146,3 +146,6 @@ L’app, basata sui framework SwiftUI e MapKit per la localizzazione degli itine
 
 /* No comment provided by engineer. */
 "End: %@" = "Fine: %@";
+
+/* No comment provided by engineer. */
+"Add Trip" = "Aggiungi un Itinerario";
