Updated map behavior when trip has no locations.

--- a/Trippic/Localization/it.lproj/Localizable.strings
+++ b/Trippic/Localization/it.lproj/Localizable.strings
@@ -149,3 +149,6 @@ L’app, basata sui framework SwiftUI e MapKit per la localizzazione degli itine
 
 /* No comment provided by engineer. */
 "Add Trip" = "Aggiungi un Itinerario";
+
+/* No comment provided by engineer. */
+"Add a location to show a map of your trip." = "Aggiungi una tappa per mostrare la mappa del tuo itinerario";
