--- a/Trippic/Localization/en.lproj/Localizable.strings
+++ b/Trippic/Localization/en.lproj/Localizable.strings
@@ -149,3 +149,6 @@ The app, made with the SwiftUI and MapKit frameworks for locating trips, has bee
 
 /* No comment provided by engineer. */
 "Add Trip" = "Add Trip";
+
+/* No comment provided by engineer. */
+"Add a location to show a map of your trip." = "Add a location to show a map of your trip.";
